--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "mobile-detect": "^1.3.6",
     "morgan": "^1.8.2",
     "native-dns": "^0.7.0",
     "node-dns": "^0.1.0",
